# gadaj

./: .gitignore  CHANGELOG.md  CLAUDE.md  DECISIONS.md  LICENSE  README.md  design.md  journal.md  journal_facility.py  pyproject.toml  wip.md
.claude/: settings.local.json
.github/workflows/: python-publish.yml
gadaj/: cli.py  colors.py  config.py  models.py  table.py  utils.py
gadaj/collectors/: __init__.py  base.py  cc.py  git.py
gadaj/reporters/: __init__.py  json_.py  markdown.py
tests/: conftest.py  test_aggregator.py  test_cc_collector.py  test_cli.py  test_colors.py  test_config.py  test_git_collector.py  test_json_reporter.py  test_markdown_reporter.py  test_table.py  test_utils.py
tests/fixtures/: sample.jsonl  sample2.jsonl  sample_git_log.txt
