[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gadaj"
version = "0.1.0"
description = "Git and AI Data Aggregator for Journaling — aggregate git history and AI coding-agent sessions into a time-windowed work log."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["git", "claude-code", "ai", "developer-tools", "journal", "worklog", "aider", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "tomli; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.scripts]
gadaj = "gadaj.cli:main"

[project.urls]
Homepage   = "https://github.com/sjjsy/gadaj"
Repository = "https://github.com/sjjsy/gadaj"
